<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Event Finder</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="label_login">Login:</string>
    <string name="label_user">Username (Email or Username):</string>
    <string name="label_password">Password:</string>
    <string name="button_login">Login</string>
    <string name="button_signup">Sign Up</string>
    <string name="button_cancel">Cancel</string>
    <string name="label_signup_greeting">Create a New Account</string>
    <string name="label_user_hint">Username</string>
    <string name="label_pass_hint">Password</string>
    <string name="label_signup_email">Email Address:</string>
    <string name="label_email_hint">Email Address</string>
    <string name="label_signup_verify_pass">Reenter Password:</string>
    <string name="label_verify_pass_hint">Password</string>
    <string name="label_signup_username">Username:</string>
    <string name="label_signup_password">Password:</string>
    <string name="student_events">Student Events</string>
    <string name="campus_events">Campus Events</string>
    <string name="create_event">Create Event</string>
    <string name="create">Create</string>
    <string name="event_name">Event Name</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="event_date">Event Date</string>
    <string name="m_d_yyyy">m/d/yyyy</string>
    <string name="event_time">Event Time</string>
    <string name="event_details">Event Details</string>
    <string name="ex_12_00am">ex: 12:00am</string>
 
    <string name="ftype1">Music</string>  
    <string name="ftype2">Sport</string>  
    <string name="ftype3">Academic</string>  
    <string name="ftype4">Free</string> 
    <string name="ftype5">Other</string> 
    
   
    <string-array name="type_list">
        <item>@string/ftype1</item>  
        <item>@string/ftype2</item>  
        <item>@string/ftype3</item>  
        <item>@string/ftype4</item> 
        <item>@string/ftype5</item> 
    </string-array>
    
    <string name="event_location">Event Location</string>
    
    <string name="ex_near_student_union">ex: near student union</string>
    <string name="menu_by_type">By Type</string>
    <string name="menu_create">Create</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_most_recent">Most Recent</string>
    <string name="menu_most_popular">Most Popular</string>
    <string name="event_type_">Event Type: </string>
    <string name="event_name_">Event Name: </string>
    <string name="event_date_">"Event Date: "</string>
    <string name="b">b</string>
    <string name="c">c</string>
    <string name="event_time_">Event Time: </string>
    <string name="event_location_">"Event location: "</string>
    <string name="d">d</string>
    <string name="event_details_">"Event Details: "</string>
    <string name="plus_">+</string>
    <string name="minus_">-</string>
    <string name="rate_event_">"Rate Event: "</string>
    <string name="_0">0</string>
    <string name="back">Back</string>
    <string name="a">a</string>
    <string name="e">e</string>
    <string name="f">f</string>
    <string name="event_rating_">Event Rating:</string>
    <string name="_">-</string>
    <string name="_p">+</string>
    <string name="_2">2</string>

</resources>