<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_signup_greeting"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/buttonRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >

        <Button
            android:id="@+id/signup_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_cancel" />

        <Button
            android:id="@+id/signup_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_signup" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonRow"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:padding="5dp" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/signup_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_signup_username" />

            <EditText
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signup_user"
                android:ems="10"
                android:hint="@string/label_user_hint"
                android:inputType="text" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/signup_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email"
                android:text="@string/label_signup_password" />

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/username"
                android:layout_below="@+id/signup_password"
                android:ems="10"
                android:hint="@string/label_pass_hint"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/signup_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/username"
                android:text="@string/label_signup_email" />

            <EditText
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/username"
                android:layout_below="@+id/signup_email"
                android:ems="10"
                android:hint="@string/label_email_hint"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/signup_verify_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password"
                android:text="@string/label_signup_verify_pass" />

            <EditText
                android:id="@+id/verify_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/password"
                android:layout_below="@+id/signup_verify_pass"
                android:ems="10"
                android:hint="@string/label_verify_pass_hint"
                android:inputType="textPassword" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>