<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/create_event"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/buttonRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >

        <Button
            android:id="@+id/e_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_cancel" />

        <Button
            android:id="@+id/e_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="eventPage"
            android:text="@string/create" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonRow2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView2"
        android:padding="5dp" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/event_name" />

            <EditText
                android:id="@+id/e_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/name_text"
                android:layout_marginLeft="18dp"
                android:ems="10"
                android:hint="@string/name" />

            <TextView
                android:id="@+id/date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/e_name"
                android:text="@string/event_date" />

            <TextView
                android:id="@+id/time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/date_text"
                android:layout_below="@+id/e_date"
                android:text="@string/event_time" />

            <EditText
                android:id="@+id/e_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/e_name"
                android:layout_below="@+id/date_text"
                android:ems="10"
                android:hint="@string/m_d_yyyy"
                android:inputType="date" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/e_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/e_date"
                android:layout_below="@+id/time_text"
                android:ems="10"
                android:hint="@string/ex_12_00am"
                android:inputType="text|time" />

            <EditText
                android:id="@+id/e_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/e_time"
                android:layout_below="@+id/detail_text"
                android:ems="10"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/location_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/e_time"
                android:text="@string/event_location" />

            <EditText
                android:id="@+id/e_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/location_text"
                android:ems="10"
                android:hint="@string/ex_near_student_union"
                android:inputType="text" />

            <TextView
                android:id="@+id/type_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toLeftOf="@+id/e_type"
                android:layout_alignRight="@+id/detail_text"
                android:text="@string/event_type_" />

            <TextView
                android:id="@+id/detail_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/e_location"
                android:text="@string/event_details" />

            <Spinner
                android:id="@+id/e_type"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_below="@+id/e_details"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/location_text"
                android:entries="@array/type_list" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>